# ChangeLog for net-www/horde-chora
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/horde-chora/ChangeLog,v 1.9 2003/10/18 18:54:59 mholzer Exp $

  19 Oct 2003; Martin Holzer <mholzer@gentoo.org> horde-chora-1.2-r1.ebuild:
  marked x86 stable.

  30 Sep 2003; Martin Holzer <mholzer@gentoo.org> horde-chora-1.1.ebuild,
  horde-chora-1.2-r1.ebuild, horde-chora-1.2.ebuild:
  Now used MY_P. Closes #28170.

*horde-chora-1.2-r1 (08 Apr 2003)
  08 Apr 2003; Dean Bailey <alron@gentoo.org> horde-chora-1.2-r1 :
  Fixed an issue that cropped up when one updates horde-chora.

*horde-chora-1.2 (03 Feb 2003)
  03 Feb 2003; Dean Bailey <alron@gentoo.org> horde-chora-1.2 :
  Updated to version 1.2 of horde-chora.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*horde-chora-1.1 (31 Oct 2002)

  31 Oct 2002; Karl Trygve Kalleberg <karltk@gentoo.org> horde-chora-1.1.ebuild files/digest-horde-chora-1.1 : 
  Initial import. Ebuild submitted by Christophe GUILLOUX <cg@rootix.info>.  