@@ -1,7 +1,7 @@
-MD5 97190cceb380414e49c20d39aba2d15e ChangeLog 1085
-MD5 94cd6f2248ab1c81a12fe9281f83c5bb horde-chora-1.1.ebuild 2077
-MD5 b52089382fb112a9fe186e84ac512661 horde-chora-1.2-r1.ebuild 1581
 MD5 4b47e4c7d98695babfc786af50c63c45 horde-chora-1.2.ebuild 2081
-MD5 033bd6c3aab6f738bb6b542b65c86133 files/digest-horde-chora-1.1 62
+MD5 94cd6f2248ab1c81a12fe9281f83c5bb horde-chora-1.1.ebuild 2077
+MD5 0be51d372b22af78f13a7dcb5c97a0e5 ChangeLog 1203
+MD5 8217237732be934074cd7b08c60a20cf horde-chora-1.2-r1.ebuild 1393
 MD5 4e7d3aeb55f6a66a360f0c4571a7804b files/digest-horde-chora-1.2 61
+MD5 033bd6c3aab6f738bb6b542b65c86133 files/digest-horde-chora-1.1 62
 MD5 4e7d3aeb55f6a66a360f0c4571a7804b files/digest-horde-chora-1.2-r1 61
